--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "author": "Nicole Grizzle",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "e2e": "cypress open"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.5"
+    "cypress": "^13.5.1",
+    "parcel-bundler": "^1.12.5",
+    "webpack": "^5.89.0"
   },
   "dependencies": {
     "react": "^18.2.0",
