--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
-    "e2e": "cypress open"
+    "e2e": "cypress open",
+    "unit": "jest test/**/*.spec.js "
   },
   "devDependencies": {
     "cypress": "^13.5.1",
+    "jest": "^29.7.0",
     "parcel-bundler": "^1.12.5",
     "webpack": "^5.89.0"
   },
