--- a/package.json
+++ b/package.json
@@ -11,14 +11,28 @@
     "unit": "jest test/**/*.spec.js "
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.5.1",
     "jest": "^29.7.0",
     "parcel-bundler": "^1.12.5",
     "webpack": "^5.89.0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rect": "^1.2.1"
+    "add": "^2.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
+    "yarn": "^1.22.21"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/setup.js"
+    ]
   }
 }
