--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
   "scripts": {
     "start": "parcel index.html",
     "e2e": "cypress open",
+    "lint": "eslint src/**/*.js test/**/*.js cypress/e2e/**/*.js",
     "unit": "jest test/**/*.spec.js "
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^29.7.0",
     "cypress": "^13.5.1",
+    "eslint": "^8.54.0",
+    "eslint-config-codingitwrong": "^0.1.4",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "parcel-bundler": "^1.12.5",
     "webpack": "^5.89.0"
@@ -26,11 +34,14 @@
     "add": "^2.0.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^22.1.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "yarn": "^1.22.21"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
       "<rootDir>/test/setup.js"
     ]
