--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,10 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
+# Define orbs at the beginning of the configuration file
+orbs:
+  cypress: cypress-io/cypress@3
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
