--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,26 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
+# Define orbs at the beginning of the configuration file
 orbs:
   cypress: cypress-io/cypress@3
-  jest: circleci/jest@2
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  cypress-tests:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
       - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - checkout
-      - cypress/run:
-          package-manager: "yarn"
-          start-command: "yarn start"
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
 
   jest-tests:
     docker:
@@ -24,11 +32,14 @@ jobs:
           command: yarn install
       - run:
           name: Run Jest tests
-          command: yarn unit
+          command: yarn test
 
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  version: 2
-  test:
+  say-hello-workflow:
     jobs:
-      - cypress-tests
+      - cypress/run:
+          package-manager: "yarn"
+          start-command: "yarn start"
       - jest-tests
