--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
+      - uses: actions/cache@v3
+        id: npm-cache
+        with:
+          path: ~/.npm
+          key: npm-${{ hashFiles('**/package.json') }}
       - name: Run install
         uses: borales/actions-yarn@v4
         with:
@@ -21,4 +26,4 @@ jobs:
       - name: Test the app
         uses: borales/actions-yarn@v4
         with:
-          cmd: unit # will run `yarn test` command
+          cmd: unit # will run `yarn unit` command
